# BitNetNanoGPT

./: README.md  model.py  pyproject.toml  train.py
config/: train_gpt2.py  train_shakespeare_char.py
data/shakespeare_char/: prepare.py
